--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>My Resume</h1>
 
-    <img src="./assets/images/me.jpeg" height="200/" />
+    <img src="./me.jpeg" height="200/" />
     <br /> 
     Ylana Leal Melo de Oliveira
     <br>Web Developer
